Mod: Fixed an issue on z-index navbar

--- a/src/components/common/Header/_Header.scss
+++ b/src/components/common/Header/_Header.scss
@@ -11,6 +11,10 @@
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.3);
     font-size: 16px;
 
+    .navbar {
+        z-index: 9000;
+    }
+
     .PUVSection {
         &__title {
             font-size: 28px;
