--- a/src/theme/components/_dropdown.scss
+++ b/src/theme/components/_dropdown.scss
@@ -13,6 +13,7 @@
         &.top.right {
             .menu {
                 right: -9px;
+                z-index: 1000;
             }
         }
 
